# slide-voice-ai

./: README.md
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
backend/app/: config.py  main.py
backend/app/data/: __init__.py  slides.py
backend/app/models/: __init__.py  events.py  slide.py
backend/app/routers/: __init__.py  websocket.py
backend/app/services/: __init__.py  realtime_client.py  realtime_config.py  session_manager.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_session_manager.py  test_websocket.py
frontend/: Makefile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  SlideControls.tsx  SlideView.tsx  VoiceIndicator.tsx
frontend/src/constants/: index.ts
frontend/src/contexts/: VoiceSessionContext.tsx  index.ts
frontend/src/stores/: index.ts  presentation.ts
frontend/src/types/: events.ts  index.ts  slide.ts  voice.ts
